--- a/sections/template-customer-addresses.liquid
+++ b/sections/template-customer-addresses.liquid
@@ -1,80 +1,80 @@
-<div x-cloak x-data="{ new_address: false }">
-  <div>
-    <h1>Addresses</h1>
-    <button type="button" x-on:click="new_address = true">Create new address</button>
-    <a href="{{ routes.account_url }}">Back to account</a>
+<div class="max-w-6xl mx-auto px-4 py-12" x-cloak x-data="{ new_address: false }">
+  <div class="flex flex-col md:flex-row items-center justify-between my-5 gap-4">
+    <h1 class="text-2xl font-bold text-gray-700">Addresses</h1>
+    <button class="text-white font-medium bg-gray-700 hover:bg-gray-900 px-6 py-2" type="button" x-on:click="new_address = true">Create new address</button>
+    <a href="{{ routes.account_url }}" class="text-blue-600 hover:text-blue-800 font-medium underline">Back to account</a>
   </div>
 
-  <div x-show="new_address">
-    <div>
-      <div>
-        <h2>New address</h2>
-        <button x-on:click="new_address = false">{% render 'icon-close' %}
+  <div class="h-full w-full fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto z-50" x-show="new_address">
+    <div class="relative max-w-md mx-auto bg-white border top-20 p-4">
+      <div class="flex items-center justify-between mb-4">
+        <h2 class="text-lg font-medium">New address</h2>
+        <button class="text-gray-500" x-on:click="new_address = false">{% render 'icon-close' %}
         </button>
       </div>
 
       {% form 'customer_address', customer.new_address %}
-        <div>
-          <label for="address_fname_{{ form.id }}">First name</label>
-          <input type="text" name="address[first_name]" id="address_fname_{{ form.id }}" value="{{ form.first_name }}">
+        <div class="mb-4">
+          <label class="uppercase text-gray-700 text-xs font-medium mb-2" for="address_fname_{{ form.id }}">First name</label>
+          <input type="text" name="address[first_name]" id="address_fname_{{ form.id }}" value="{{ form.first_name }}" class="w-full text-gray-700 border px-4 py-3 focus:outline-none">
         </div>
 
 
-        <div>
-          <label for="address_lname_{{ form.id }}">Last name</label>
-          <input type="text" name="address[last_name]" id="address_lname_{{ form.id }}" value="{{ form.last_name }}">
+        <div class="mb-4">
+          <label class="uppercase text-gray-700 text-xs font-medium mb-2" for="address_lname_{{ form.id }}">Last name</label>
+          <input type="text" name="address[last_name]" id="address_lname_{{ form.id }}" value="{{ form.last_name }}" class="w-full text-gray-700 border px-4 py-3 focus:outline-none">
         </div>
 
-        <div>
-          <label for="address_company_{{ form.id }}">Company</label>
-          <input type="text" name="address[company]" id="address_company_{{ form.id }}" value="{{ form.company }}">
+        <div class="mb-4">
+          <label class="uppercase text-gray-700 text-xs font-medium mb-2" for="address_company_{{ form.id }}">Company</label>
+          <input type="text" name="address[company]" id="address_company_{{ form.id }}" value="{{ form.company }}" class="w-full text-gray-700 border px-4 py-3 focus:outline-none">
         </div>
 
-        <div>
-          <label for="address_address1_{{ form.id }}">Address 1</label>
-          <input type="text" name="address[address1]" id="address_address1_{{ form.id }}" value="{{ form.address1 }}">
+        <div class="mb-4">
+          <label class="uppercase text-gray-700 text-xs font-medium mb-2" for="address_address1_{{ form.id }}">Address 1</label>
+          <input type="text" name="address[address1]" id="address_address1_{{ form.id }}" value="{{ form.address1 }}" class="w-full text-gray-700 border px-4 py-3 focus:outline-none">
         </div>
 
-        <div>
-          <label for="address_address2_{{ form.id }}">Address 2</label>
-          <input type="text" name="address[address2]" id="address_address2_{{ form.id }}" value="{{ form.address2 }}">
+        <div class="mb-4">
+          <label class="uppercase text-gray-700 text-xs font-medium mb-2" for="address_address2_{{ form.id }}">Address 2</label>
+          <input type="text" name="address[address2]" id="address_address2_{{ form.id }}" value="{{ form.address2 }}" class="w-full text-gray-700 border px-4 py-3 focus:outline-none">
         </div>
 
-        <div>
-          <label for="address_city_{{ form.id }}">City</label>
-          <input type="text" name="address[city]" id="address_city_{{ form.id }}" value="{{ form.city }}">
+        <div class="mb-4">
+          <label class="uppercase text-gray-700 text-xs font-medium mb-2" for="address_city_{{ form.id }}">City</label>
+          <input type="text" name="address[city]" id="address_city_{{ form.id }}" value="{{ form.city }}" class="w-full text-gray-700 border px-4 py-3 focus:outline-none">
         </div>
 
-        <div>
-          <label for="address_country_{{ form.id }}">Country</label>
-          <select name="address[country]" id="address_country_{{ form.id }}" value="{{ form.country }}" data-country-selector data-id="{{ form.id }}">
+        <div class="mb-4">
+          <label class="uppercase text-gray-700 text-xs font-medium mb-2" for="address_country_{{ form.id }}">Country</label>
+          <select name="address[country]" id="address_country_{{ form.id }}" value="{{ form.country }}" class="w-full text-gray-700 border px-4 py-3 focus:outline-none" data-country-selector data-id="{{ form.id }}">
             {{ all_country_option_tags }}
           </select>
         </div>
 
-        <div>
-          <label for="address_province_{{ form.id }}">Province</label>
-          <select name="address[province]" id="address_province_{{ form.id }}" value="{{ form.province }}"></select>
+        <div class="mb-4">
+          <label class="uppercase text-gray-700 text-xs font-medium mb-2" for="address_province_{{ form.id }}">Province</label>
+          <select name="address[province]" id="address_province_{{ form.id }}" value="{{ form.province }}" class="w-full text-gray-700 border px-4 py-3 focus:outline-none"></select>
         </div>
 
-        <div>
-          <label for="address_zip_{{ form.id }}">Postal/ZIP code</label>
-          <input type="text" name="address[zip]" id="address_zip_{{ form.id }}" value="{{ form.zip }}">
+        <div class="mb-4">
+          <label class="uppercase text-gray-700 text-xs font-medium mb-2" for="address_zip_{{ form.id }}">Postal/ZIP code</label>
+          <input type="text" name="address[zip]" id="address_zip_{{ form.id }}" value="{{ form.zip }}" class="w-full text-gray-700 border px-4 py-3 focus:outline-none">
         </div>
 
-        <div>
-          <label for="address_phone_{{ form.id }}">Phone number</label>
-          <input type="tel" name="address[phone]" id="address_phone_{{ form.id }}" value="{{ form.phone }}">
+        <div class="mb-4">
+          <label class="uppercase text-gray-700 text-xs font-medium mb-2" for="address_phone_{{ form.id }}">Phone number</label>
+          <input type="tel" name="address[phone]" id="address_phone_{{ form.id }}" value="{{ form.phone }}" class="w-full text-gray-700 border px-4 py-3 focus:outline-none">
         </div>
 
-        <div>
+        <div class="mb-4">
           {{ form.set_as_default_checkbox }}
-          <label for="address_default_address_{{ form.id }}">Set as default address</label>
+          <label class="uppercase text-gray-700 text-xs font-medium mb-2" for="address_default_address_{{ form.id }}">Set as default address</label>
         </div>
 
-        <div>
-          <button type="submit">Create address</button>
-          <button type="reset">Cancel</button>
+        <div class="flex flex-row gap-2">
+          <button class="w-full font-medium text-white bg-gray-700 hover:bg-gray-900 px-4 py-2" type="submit">Create address</button>
+          <button class="w-full font-medium text-gray-700 border border-gray-700 px-4 py-2" type="reset">Cancel</button>
         </div>
       {% endform %}
     </div>
@@ -82,21 +82,21 @@
 
   <div>
     {% paginate customer.addresses by 10 %}
-      <div>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 lg:gap-12 p-4 md:p-12">
         {% for address in customer.addresses %}
           <div x-data="{ address_{{ address.id }}: false }">
-            <div>
+            <div class="relative flex flex-col text-center border p-2">
               {% if address == customer.default_address %}
-                <span>Default</span>
+                <span class="text-xs font-medium text-white bg-green-700 px-4 py-2">Default</span>
               {% endif %}
 
-              <div>
+              <div class="my-8 h-full">
                 {{ address | format_address }}
               </div>
 
-              <div>
-                <button x-on:click="address_{{ address.id }} = true">Edit</button>
-                <button data-url="{{ address.url }}" data-delete-address>Delete</button>
+              <div class="flex flex-row gap-2">
+                <button class="w-full text-xs text-white bg-gray-700 hover:bg-gray-900 font-medium py-2" x-on:click="address_{{ address.id }} = true">Edit</button>
+                <button class="w-full text-xs font-medium text-gray-700 border py-2" data-url="{{ address.url }}" data-delete-address>Delete</button>
               </div>
 
               <form method="post" action="{{ address.url }}">
@@ -104,75 +104,75 @@
               </form>
             </div>
 
-            <div x-show="address_{{ address.id }}">
-              <div>
-                <div>
-                  <h2>Edit address</h2>
-                  <button x-on:click="address_{{ address.id }} = false">{% render 'icon-close' %}
+            <div class="h-full w-full fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto z-50" x-show="address_{{ address.id }}">
+              <div class="relative max-w-md mx-auto bg-white border top-20 bottom-20 p-4">
+                <div class="flex items-center justify-between mb-4">
+                  <h2 class="text-lg font-medium">Edit address</h2>
+                  <button class="text-gray-500" x-on:click="address_{{ address.id }} = false">{% render 'icon-close' %}
                   </button>
                 </div>
 
                 {% form 'customer_address', address %}
-                  <div>
-                    <label for="address_fname_{{ form.id }}">First name</label>
-                    <input type="text" name="address[first_name]" id="address_fname_{{ form.id }}" value="{{ form.first_name }}">
+                  <div class="mb-4">
+                    <label class="uppercase text-gray-700 text-xs font-medium mb-2" for="address_fname_{{ form.id }}">First name</label>
+                    <input type="text" name="address[first_name]" id="address_fname_{{ form.id }}" value="{{ form.first_name }}" class="w-full text-gray-700 border px-4 py-3 focus:outline-none">
                   </div>
 
-                  <div>
-                    <label for="address_lname_{{ form.id }}">Last name</label>
-                    <input type="text" name="address[last_name]" id="address_lname_{{ form.id }}" value="{{ form.last_name }}">
+                  <div class="mb-4">
+                    <label class="uppercase text-gray-700 text-xs font-medium mb-2" for="address_lname_{{ form.id }}">Last name</label>
+                    <input type="text" name="address[last_name]" id="address_lname_{{ form.id }}" value="{{ form.last_name }}" class="w-full text-gray-700 border px-4 py-3 focus:outline-none">
                   </div>
 
-                  <div>
-                    <label for="address_company_{{ form.id }}">Company</label>
-                    <input type="text" name="address[company]" id="address_company_{{ form.id }}" value="{{ form.company }}">
+                  <div class="mb-4">
+                    <label class="uppercase text-gray-700 text-xs font-medium mb-2" for="address_company_{{ form.id }}">Company</label>
+                    <input type="text" name="address[company]" id="address_company_{{ form.id }}" value="{{ form.company }}" class="w-full text-gray-700 border px-4 py-3 focus:outline-none">
                   </div>
 
-                  <div>
-                    <label for="address_address1_{{ form.id }}">Address 1</label>
-                    <input type="text" name="address[address1]" id="address_address1_{{ form.id }}" value="{{ form.address1 }}">
+                  <div class="mb-4">
+                    <label class="uppercase text-gray-700 text-xs font-medium mb-2" for="address_address1_{{ form.id }}">Address 1</label>
+                    <input type="text" name="address[address1]" id="address_address1_{{ form.id }}" value="{{ form.address1 }}" class="w-full text-gray-700 border px-4 py-3 focus:outline-none">
                   </div>
 
-                  <div>
-                    <label for="address_address2_{{ form.id }}">Address 2</label>
-                    <input type="text" name="address[address2]" id="address_address2_{{ form.id }}" value="{{ form.address2 }}">
+                  <div class="mb-4">
+                    <label class="uppercase text-gray-700 text-xs font-medium mb-2" for="address_address2_{{ form.id }}">Address 2</label>
+                    <input type="text" name="address[address2]" id="address_address2_{{ form.id }}" value="{{ form.address2 }}" class="w-full text-gray-700 border px-4 py-3 focus:outline-none">
                   </div>
 
-                  <div>
-                    <label for="address_city_{{ form.id }}">City</label>
-                    <input type="text" name="address[city]" id="address_city_{{ form.id }}" value="{{ form.city }}">
+                  <div class="mb-4">
+                    <label class="uppercase text-gray-700 text-xs font-medium mb-2" for="address_city_{{ form.id }}">City</label>
+                    <input type="text" name="address[city]" id="address_city_{{ form.id }}" value="{{ form.city }}" class="w-full text-gray-700 border px-4 py-3 focus:outline-none">
                   </div>
 
-                  <div>
-                    <label for="address_country_{{ form.id }}">Country</label>
-                    <select name="address[country]" id="address_country_{{ form.id }}" value="{{ form.country }}" data-country-selector data-id="{{ form.id }}">
+                  <div class="mb-4">
+                    <label class="uppercase text-gray-700 text-xs font-medium mb-2" for="address_country_{{ form.id }}">Country</label>
+                    <select name="address[country]" id="address_country_{{ form.id }}" value="{{ form.country }}" class="w-full text-gray-700 border px-4 py-3 focus:outline-none" data-country-selector data-id="{{ form.id }}">
                       {{ all_country_option_tags }}
                     </select>
                   </div>
 
-                  <div>
-                    <label for="address_province_{{ form.id }}">Province</label>
-                    <select name="address[province]" id="address_province_{{ form.id }}" value="{{ form.province }}"></select>
+                  <div class="mb-4">
+                    <label class="uppercase text-gray-700 text-xs font-medium mb-2" for="address_province_{{ form.id }}">Province</label>
+                    <select name="address[province]" id="address_province_{{ form.id }}" value="{{ form.province }}" class="w-full text-gray-700 border px-4 py-3 focus:outline-none"></select>
                   </div>
 
-                  <div>
-                    <label for="address_zip_{{ form.id }}">Postal/ZIP code</label>
-                    <input type="text" name="address[zip]" id="address_zip_{{ form.id }}" value="{{ form.zip }}">
+                  <div class="mb-4">
+                    <label class="uppercase text-gray-700 text-xs font-medium mb-2" for="address_zip_{{ form.id }}">Postal/ZIP code</label>
+                    <input type="text" name="address[zip]" id="address_zip_{{ form.id }}" value="{{ form.zip }}" class="w-full text-gray-700 border px-4 py-3 focus:outline-none">
                   </div>
 
-                  <div>
-                    <label for="address_phone_{{ form.id }}">Phone number</label>
-                    <input type="tel" name="address[phone]" id="address_phone_{{ form.id }}" value="{{ form.phone }}">
+                  <div class="mb-4">
+                    <label class="uppercase text-gray-700 text-xs font-medium mb-2" for="address_phone_{{ form.id }}">Phone number</label>
+                    <input type="tel" name="address[phone]" id="address_phone_{{ form.id }}" value="{{ form.phone }}" class="w-full text-gray-700 border px-4 py-3 focus:outline-none">
                   </div>
 
-                  <div>
+                  <div class="mb-4">
                     {{ form.set_as_default_checkbox }}
-                    <label for="address_default_address_{{ form.id }}">Set as default address</label>
+                    <label class="uppercase text-gray-700 text-xs font-medium mb-2" for="address_default_address_{{ form.id }}">Set as default address</label>
                   </div>
 
-                  <div>
-                    <button type="submit">Save</button>
-                    <button type="reset">Cancel</button>
+                  <div class="flex flex-row gap-2">
+                    <button class="w-full font-medium text-white bg-gray-700 hover:bg-gray-900 px-4 py-2" type="submit">Save</button>
+                    <button class="w-full font-medium text-gray-700 border border-gray-700 px-4 py-2" type="reset">Cancel</button>
                   </div>
                 {% endform %}
               </div>
